--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.2.1",
     "firebase-admin": "^13.6.0",
     "mongodb": "^7.0.0",
-    "stripe": "^20.0.0"
+    "stripe": "^20.0.0",
+    "vercel": "^25.2.0"
   }
 }
