--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "const": "^1.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "firebase-admin": "^13.6.0",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
     "stripe": "^20.0.0",
     "vercel": "^25.2.0"
